--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,10 @@ dependencies = [
 ]
 
 [dependency-groups]
-dev = ["httpx>=0.28.1", "pytest>=8.4.1", "ruff>=0.12.7"]
+dev = [
+    "httpx>=0.28.1",
+    "mkdocs>=1.6.1",
+    "mkdocs-material>=9.6.17",
+    "pytest>=8.4.1",
+    "ruff>=0.12.7",
+]
