--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,25 @@ dependencies = [
     "uvicorn[standard]>=0.35.0",
 ]
 
+[tool.ruff]
+line-length = 80
+
+[tool.ruff.lint]
+extend-select = ["I", "UP"]
+
+[tool.commitizen]
+name = "cz_conventional_commits"
+tag_format = "$version"
+version_scheme = "pep440"
+version_provider = "cargo"
+update_changelog_on_bump = true
+major_version_zero = true
+version_files = ["pyproject.toml:version"]
+annotated_tag = true
+
 [dependency-groups]
 dev = [
+    "commitizen>=4.8.3",
     "httpx>=0.28.1",
     "mkdocs>=1.6.1",
     "mkdocs-material>=9.6.17",
