--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,10 @@ requires-python = ">=3.13"
 dependencies = [
     "email-validator>=2.2.0",
     "fastapi>=0.116.1",
+    "granian[uvloop]>=2.5.0",
     "orjson>=3.11.1",
     "python-decouple>=3.8",
     "secure>=1.0.1",
-    "uvicorn[standard]>=0.35.0",
 ]
 
 [tool.ruff]
@@ -37,4 +37,5 @@ dev = [
     "mkdocs-material>=9.6.17",
     "pytest>=8.4.1",
     "ruff>=0.12.7",
+    "uvicorn>=0.35.0",
 ]
