feat: added basic database session management
also using sqlalchemy orm to manage columns

BREAKING CHANGE: database is now ready for use

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,10 @@ LOG_LEVEL=info
 SERVER_HOST=0.0.0.0
 SERVER_PORT=8000
 WORKERS=5
+
+DB_HOST=            # Database host (e.g., localhost or IP address)
+DB_PORT=            # Database port (e.g., 5432)
+DB_USER=            # Database username
+DB_PASSWORD=        # Database password
+DB_NAME=            # Database name
+DB_POOL_SIZE=      # Database connection pool size (e.g., 3)
