docs(.env.example): added missing explaining envs

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-LOCAL=True
-LOG_LEVEL=info
-SERVER_HOST=0.0.0.0
-SERVER_PORT=8000
-WORKERS=5
+{{REWRITTEN_CODE}}
+LOCAL=True          # Boolean flag indicating if the application is running in a local development environment.
+LOG_LEVEL=info      # The logging level for the application (e.g., debug, info, warning, error, critical).
+SERVER_HOST=0.0.0.0 # The IP address the server will bind to. 0.0.0.0 makes it accessible from any interface.
+SERVER_PORT=8000    # The port number on which the server will listen for incoming connections.
+WORKERS=5           # The number of worker processes to spawn for handling requests.
 
 DB_HOST=            # Database host (e.g., localhost or IP address)
 DB_PORT=            # Database port (e.g., 5432)
