docs(database.md): added docs about database management

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ nav:
   - Estrutura do Projeto: project_structure.md
   - Arquitetura DDD: domain_driven_design.md
   - Criando Novas Rotas: creating_routes.md
+  - Banco de Dados: database.md
   - Documentação API:
       - Avaliação Regional: Avaliacao_Regional_doc.md
       - Pontuação: pontuacao-doc.md
@@ -34,3 +35,11 @@ theme:
     - toc.integrate
 plugins:
   - search
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
