--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,9 @@ requires-python = ">=3.13"
 dependencies = [
     "asyncpg>=0.30.0",
     "email-validator>=2.2.0",
-    "escudeiro>=0.2.17",
     "fastapi>=0.116.1",
     "granian[uvloop]>=2.5.0",
+    "greenlet>=3.2.4",
     "orjson>=3.11.1",
     "python-decouple>=3.8",
     "secure>=1.0.1",
@@ -58,6 +58,5 @@ dev = [
     "mkdocs>=1.6.1",
     "mkdocs-material>=9.6.17",
     "pytest>=8.4.1",
-    "ruff>=0.12.7",
     "uvicorn>=0.35.0",
 ]
